dbusactivationrunner: only activate well-formed services

From the specification:

> The application must name its desktop file in accordance with the
> naming recommendations in the introduction section (e.g. the filename
> must be like org.example.FooViewer.desktop).

When an application is in violation of this we'll not dbus activate it
lest libdbus assert crashes in our face

BUG: 475266
(cherry picked from commit 246ea181b16603c1bbbe6912c27a8bfc503e894f)